--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,9 +1,49 @@
 body {
+    background-color: #c65e5c;
+    background-image: url('./img/fondo.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: 'Raleway', sans-serif;
-    font-size: 1.4em;
+    font-size: 1em;
+    color: white
 }
 
-.titulo {
-    font-family: 'Averia Serif Libre', cursive;
-    font-size: 3em;
+
+/*********NAVBAR***********/
+
+nav {
+    margin-left: 50px;
 }
+
+
+/*********PORTAFOLIO***********/
+
+@media (max-width: 1200px) {
+    #medio-yo {
+        width: 150%;
+        height: auto;
+    }
+}
+
+@media (max-width: 992px) {
+    #medio-yo {
+        width: 100%;
+        height: auto;
+    }
+}
+
+#medio-yo:parent {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+#desc {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+
+/*********SOBRE MI***********/
+
+
+/*********MAS SOBRE MI***********/
