--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,11 +1,25 @@
+$background: #c65e5c;
+html,
 body {
-    background-color: #c65e5c;
+    height: 100vh;
+    width: 100vw;
+}
+
+body {
+    background-color: $background;
     background-image: url('../components/img/fondo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
     color: white
+}
+
+main {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 
