--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,7 +11,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Raleway', sans-serif;
-    font-size: 1em;
+    font-size: 1.2em;
     color: white
 }
 
@@ -26,31 +26,31 @@ main {
 /*********NAVBAR***********/
 
 nav {
-    margin-left: 20px;
+    margin-left: 15px;
 }
 
 
 /*********PORTAFOLIO***********/
 
 @media (max-width: 1200px) {
-    #medio-yo {
+    .portfolio__face {
         width: 150%;
         height: auto;
     }
 }
 
 @media (max-width: 992px) {
-    #medio-yo {
+    .portfolio__face {
         width: 100%;
         height: auto;
     }
 }
 
 @media (max-width: 575px) {
-    #medio-yo {
+    .portfolio__face {
         display: none;
     }
-    #desc {
+    .portfolio__description {
         padding-left: 2rem;
         padding-right: 2rem;
     }
@@ -59,7 +59,7 @@ nav {
     }
 }
 
-#desc {
+.portfolio__description {
     margin-top: auto;
     margin-bottom: auto;
 }
