--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,8 @@ $background: #c65e5c;
 html,
 body {
     height: 100%;
-    width: 100vw;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 body {
@@ -14,79 +15,8 @@ body {
     color: white
 }
 
-.portfolio__project {
-    width: 500px;
-    height: 500px;
-    background-size: cover;
-}
-
-@media(max-width: 1400px) {
-    .portfolio__project {
-        width: 400px;
-        height: 400px;
-    }
-}
-
-@media(max-width: 991px) {
-    .portfolio__project {
-        width: 300px;
-        height: 300px;
-    }
-}
-
-@media(max-width: 767px) {
-    .portfolio__project {
-        width: 200px;
-        height: 200px;
-    }
-}
-
-
-/*********NAVBAR***********/
-
-nav {
-    margin-left: 15px;
-}
-
-
-/*********PORTAFOLIO***********/
-
-@media (max-width: 1200px) {
-    .portfolio__face {
-        width: 150%;
-        height: auto;
-    }
-}
-
-@media (max-width: 992px) {
-    .portfolio__face {
-        width: 100%;
-        height: auto;
-    }
-}
-
-@media (max-width: 575px) {
-    .portfolio__face {
-        display: none;
-    }
-    .portfolio__description {
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
-    #portafolio:first-child {
-        margin-top: 0;
-    }
-}
-
-.portfolio__description {
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-.portfolio__project {}
-
-
-/*********SOBRE MI***********/
-
-
-/*********MAS SOBRE MI***********/
+@import 'navBar';
+@import 'portafolio';
+// @import 'sobreMi';
+// @import 'masSobreMi';
+// @import 'contacto';
