--- a/src/styles/_portafolio.scss
+++ b/src/styles/_portafolio.scss
@@ -31,11 +31,12 @@
 
 .portfolio__card {
     background: rgba(255, 255, 255, 0.08);
-    box-shadow: 0 4px 25px 0 rgba(255, 255, 255, 0.3);
+    box-shadow: 0 5px 25px 0 rgba(255, 255, 255, 0.4);
     backdrop-filter: blur( 9.0px);
     -webkit-backdrop-filter: blur( 9.0px);
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 13px;
+    height: 100%;
 }
 
 // @media(max-width: 1400px) {
@@ -58,7 +59,7 @@
 // }
 .portfolioCard__title {
     border-radius: 13px 13px 0 0;
-    padding: 1rem 1rem 0 1rem;
+    padding: 1.6rem 1rem .5rem 1rem;
     font-weight: 600;
     font-size: 1.5rem;
 }
@@ -74,8 +75,6 @@
 }
 
 .portfolioCard__links {
-    font-size: 1rem;
-    font-weight: 400;
     background: rgba(255, 255, 255, 0.15);
     padding: .5rem;
     border-radius: 13px;
