--- a/src/styles/_contacto.scss
+++ b/src/styles/_contacto.scss
@@ -3,5 +3,24 @@
 }
 
 .contact-info {
-    padding-left: 16px, ;
+    padding-left: 16px;
+}
+
+.contact-info a {
+    color: white;
+    text-decoration: none;
+    &:hover {
+        color: white;
+        text-decoration: none;
+    }
+}
+
+@media (max-width: 460px) {
+    .contacto .container {
+        flex-direction: column;
+    }
+    .contact-info {
+        padding-left: 0;
+        text-align: center;
+    }
 }
