--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,9 +6,10 @@ $grey: rgba(255, 255, 255, 0.487);
 }
 
 %glass {
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(255, 255, 255, 0.3);
     box-shadow: 0 5px 20px 0 rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur( 3.0px);
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
