--- a/src/styles/_masSobreMi.scss
+++ b/src/styles/_masSobreMi.scss
@@ -2,6 +2,10 @@
     p {
         max-width: 600px;
         text-align: justify;
+        margin-top: 35px;
+    }
+    img {
+        height: auto!important;
     }
 }
 
