--- a/src/styles/_portafolio.scss
+++ b/src/styles/_portafolio.scss
@@ -37,9 +37,12 @@
 
 .portfolioCard__title {
     border-radius: 13px 13px 0 0;
-    padding: 1.6rem 1rem .5rem 1rem;
+    padding: 1.6rem 1rem 0 1rem;
     font-weight: 500;
     font-size: 1.7rem;
+    p {
+        margin-bottom: 3px;
+    }
 }
 
 .portfolioCard__image {
@@ -49,7 +52,7 @@
 }
 
 .portfolio__description {
-    padding: 1rem 1rem 0 1rem;
+    padding: 1rem 1rem 1rem 1rem;
 }
 
 .portfolioCard__links {
