--- a/src/styles/_sobreMi.scss
+++ b/src/styles/_sobreMi.scss
@@ -12,7 +12,7 @@
 }
 
 .conocimientos {
-    padding: 6px 20px;
+    padding: 6px 10px;
     border-radius: 10px;
     @extend %glass;
     display: inline;
@@ -35,32 +35,24 @@
     margin-bottom: 150px;
 }
 
-.formacion,
-.experiencia {
+.timeline-title {
     display: inline;
-    padding: 6px 20px;
+    padding: 6px 10px;
+    border-radius: 10px;
     @extend %glass;
-}
-
-.formacion {
-    border-radius: 10px 0 0 10px;
-}
-
-.experiencia {
-    border-radius: 0 10px 10px 0;
 }
 
 .sobre-mi-left {
     border-right: 1px solid $blue;
     border-bottom: 1px solid $blue;
-    padding: 26px 20px 15px 0;
+    padding: 26px 20px 15px 3px;
     text-align: right;
 }
 
 .sobre-mi-right {
     border-left: 1px solid $blue;
     border-bottom: 1px solid $blue;
-    padding: 26px 0 15px 20px;
+    padding: 26px 3px 15px 20px;
 }
 
 .year {
