--- a/src/styles/_sobreMi.scss
+++ b/src/styles/_sobreMi.scss
@@ -9,6 +9,11 @@
             font-weight: 600;
         }
     }
+    .fa-caret-down {
+        display: block;
+        font-size: 40px;
+        opacity: 0.4;
+    }
 }
 
 .conocimientos {
