--- a/src/styles/_portafolio.scss
+++ b/src/styles/_portafolio.scss
@@ -3,6 +3,16 @@
         width: 150%;
         height: auto;
     }
+
+    .portfolio__description {
+        h1 {
+            font-size: 1.8em;
+        }
+
+        h3 {
+            font-size: 1em;
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -10,14 +20,35 @@
         width: 100%;
         height: auto;
     }
+
+    .portfolio__description {
+        h1 {
+            font-size: 1.5em;
+        }
+
+        h3 {
+            font-size: 1em;
+        }
+    }
 }
 
 @media (max-width: 575px) {
     .portfolio__face {
         display: none;
     }
+
     #portafolio:first-child {
         margin-top: 0;
+    }
+
+    .portfolio__description {
+        h1 {
+            font-size: 1.5em;
+        }
+
+        h3 {
+            font-size: 1em;
+        }
     }
 }
 
@@ -27,9 +58,9 @@
 
 .portfolio__card {
     background: rgba(255, 255, 255, 0.08);
-    box-shadow: 0 5px 25px 0 rgba(255, 255, 255, 0.4);
-    backdrop-filter: blur( 9.0px);
-    -webkit-backdrop-filter: blur( 9.0px);
+    box-shadow: 0 5px 25px 0 rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(9.0px);
+    -webkit-backdrop-filter: blur(9.0px);
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 13px;
     height: 100%;
@@ -40,6 +71,7 @@
     padding: 1.6rem 1rem 0 1rem;
     font-weight: 500;
     font-size: 1.7rem;
+
     p {
         margin-bottom: 3px;
     }
@@ -47,7 +79,7 @@
 
 .portfolioCard__image {
     .img-fluid {
-        border-radius: 13px;
+        border-radius: 13px 13px 0 0;
     }
 }
 
@@ -55,9 +87,13 @@
     padding: 1rem 1rem 1rem 1rem;
 }
 
-.portfolioCard__links {
-    background: rgba(255, 255, 255, 0.15);
-    padding: .5rem;
-    border-radius: 13px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
+#portafolio {
+    strong {
+        font-weight: 600;
+    }
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
