--- a/src/styles/_portafolio.scss
+++ b/src/styles/_portafolio.scss
@@ -56,6 +56,10 @@
     margin-top: 130px;
 }
 
+#intro {
+    margin-bottom: 100px !important;
+}
+
 .portfolio__card {
     background: rgba(255, 255, 255, 0.08);
     box-shadow: 0 5px 25px 0 rgba(255, 255, 255, 0.3);
