--- a/src/styles/_sobreMi.scss
+++ b/src/styles/_sobreMi.scss
@@ -2,13 +2,16 @@
     p {
         font-size: 1rem;
     }
+
     a {
         color: rgb(255, 255, 255);
         text-decoration: none;
+
         &:hover {
             font-weight: 600;
         }
     }
+
     .fa-caret-down {
         display: block;
         font-size: 40px;
@@ -17,6 +20,9 @@
 }
 
 .conocimientos {
+    font-family: "Big Shoulders Display", sans-serif;
+    font-weight: 200;
+    font-size: 3em;
     padding: 6px 10px;
     border-radius: 10px;
     @extend %glass;
@@ -27,6 +33,12 @@
     p {
         margin-bottom: 5px;
     }
+
+    h4 {
+        font-family: "Big Shoulders Display", sans-serif;
+        font-weight: 200;
+        font-size: 2em;
+    }
 }
 
 @media (max-width: 991px) {
@@ -36,11 +48,14 @@
 }
 
 #timeline {
-    margin-top: 100px!important;
+    margin-top: 100px !important;
     margin-bottom: 150px;
 }
 
 .timeline-title {
+    font-family: "Big Shoulders Display", sans-serif;
+    font-weight: 200;
+    font-size: 3em;
     display: inline;
     padding: 6px 10px;
     border-radius: 10px;
