--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -56,7 +56,7 @@
         display: none;
     }
 
-    #portafolio:first-child {
+    #about:first-child {
         margin-top: 0;
     }
 
@@ -115,7 +115,7 @@
     padding: 0 1rem 1rem 1rem;
 }
 
-#portafolio {
+#about {
     strong {
         font-weight: 600;
     }
@@ -126,30 +126,30 @@ a {
     text-decoration: none;
 }
 
-#project-card{
+#project-card {
     width: 75%;
     border: 1px solid rgba(255, 255, 255, 0.3);
     margin: 100px 0;
 
-    h2{
+    h2 {
         font-size: 1.2em;
         font-weight: 300;
         letter-spacing: 0.1em;
         margin-top: 10px;
     }
 
-    .secondary-image{
-        height:230px;
+    .secondary-image {
+        height: 230px;
         background-position: top;
         background-size: cover;
     }
 }
 
 @media (max-width: 1199px) {
-    #project-card{
+    #project-card {
         width: 100%;
 
-        h2{
+        h2 {
             font-size: 1em;
             font-weight: 300;
             letter-spacing: 0.1em;
@@ -159,10 +159,10 @@ a {
 }
 
 @media (max-width: 992px) {
-    #project-card{
+    #project-card {
         width: 100%;
 
-        h2{
+        h2 {
             font-size: 0.8em;
             font-weight: 300;
             letter-spacing: 0.1em;
@@ -172,10 +172,10 @@ a {
 }
 
 @media (max-width: 575px) {
-    #project-card{
+    #project-card {
         width: 100%;
 
-        h2{
+        h2 {
             font-size: 0.6em;
             font-weight: 300;
             letter-spacing: 0.05em;
