--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,8 @@
-$background: #c65e5c;
+$background: #c6685c;
 $blue: #265e84;
 $grey: rgba(255, 255, 255, 0.487);
+$light-grey: rgb(232, 232, 232);
+$bg-black-transparent: rgba(0, 0, 0, 0.278);
 
 .grey {
     color: $grey;
@@ -27,7 +29,8 @@ body {
     background-size: cover;
     font-family: 'Raleway', sans-serif;
     font-size: 1.2em;
-    color: white
+    color: white;
+    overflow-x: hidden;
 }
 
 #root {
@@ -53,7 +56,5 @@ body {
 }
 
 @import 'navBar';
-@import 'portafolio';
-@import 'sobreMi';
-@import 'masSobreMi';
+@import 'about';
 @import 'contacto';
