--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,10 @@ $bg-black-transparent: rgba(0, 0, 0, 0.278);
     color: $grey;
 }
 
+.blue {
+    color: $blue;
+}
+
 %glass {
     background: rgba(255, 255, 255, 0.3);
     box-shadow: 0 5px 20px 0 rgba(255, 255, 255, 0.2);
@@ -55,6 +59,24 @@ body {
     font-style: normal;
 }
 
+.section-title {
+    font-family: "Big Shoulders Display", sans-serif;
+    font-weight: 300;
+    text-align: center;
+    font-size: 8rem;
+    letter-spacing: 0.3em;
+}
+
+@media (max-width: 992px) {
+    .section-title {
+        text-align: left;
+        font-size: 5rem;
+        letter-spacing: 0.1em;
+    }
+}
+
+
 @import 'navBar';
 @import 'about';
+@import 'experience';
 @import 'contacto';
