--- a/src/styles/_experience.scss
+++ b/src/styles/_experience.scss
@@ -9,6 +9,11 @@
       margin: 0;
     }
 
+    h4{
+      margin-bottom: 2px;
+      font-size: 1.8rem;
+    }
+
     hr {
       border: none;
       border-top: 1px solid #265e84;
