--- a/src/styles/_experience.scss
+++ b/src/styles/_experience.scss
@@ -19,5 +19,19 @@
       border-top: 1px solid #265e84;
       width: 100%;
     }
+
+    .tool-list {
+        list-style: none;
+      li {
+        padding: 0 15px;
+        border-radius: 20px;
+        margin-bottom: 10px;
+        width: auto;
+        box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.123);
+      }
+    }
+    .tool-list li {
+      width: fit-content;
+    }
   }
 }
