--- a/src/styles/_navBar.scss
+++ b/src/styles/_navBar.scss
@@ -26,11 +26,11 @@
     }
 
     .navbar-nav {
-        border-radius: 6px;
+        border-radius: 20px;
         border: 1px solid rgba(255, 255, 255, 0.313);
-        background-color: $bg-black-transparent;
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
+        background: $bg-light;
+        backdrop-filter: blur(3px);
+        -webkit-backdrop-filter: blur(3px);
         box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.147);
     }
 
