--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@ $light-grey: rgb(232, 232, 232);
 $bg-black-transparent: rgba(0, 0, 0, 0.278);
 $bg-light: #e5722684;
 $yellow: #de9a1b;
+$yellow-gradient: linear-gradient(to bottom, #de9a1b, #c38a21);
 
 .grey {
     color: $grey;
