--- a/src/styles/_experience.scss
+++ b/src/styles/_experience.scss
@@ -3,9 +3,9 @@
     h2 {
       font-family: "Big Shoulders Display", sans-serif;
       font-weight: 300;
-      color: $blue;
+      color: white;
       font-size: 3rem;
-      letter-spacing: 0.2em;
+      letter-spacing: 0.1em;
       margin: 0;
     }
 
@@ -22,6 +22,7 @@
 
     .tool-list {
         list-style: none;
+        padding-left: 0;
       li {
         padding: 0 15px;
         border-radius: 20px;
@@ -32,6 +33,30 @@
     }
     .tool-list li {
       width: fit-content;
+    }
+
+    .company-card {
+      border-radius: 0 50px;
+
+      .title {
+        border-radius: 0 30px 0 0;
+        padding: 10px 20px;
+        background-color: $blue;
+      }
+
+      .content {
+        border-radius: 0 0 0 30px;
+        padding: 10px 20px;
+        background: $yellow-gradient;
+      }
+    }
+
+    .job-details {
+      padding: 0 0 0 40px;
+
+      span {
+        display: inline;
+      }
     }
   }
 }
