--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -74,8 +74,29 @@ a{
 }
 
 
+.tool-list {
+    list-style: none;
+    padding-left: 0;
+    li {
+    padding: 0 15px;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    width: auto;
+    box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.123);
+    }
+}
+.tool-list li {
+    width: fit-content;
+}
+
+
+#tool-item {
+    font-size: 0.9rem;
+}
+
 @import 'navBar';
 @import 'about';
 @import 'experience';
 @import 'education';
 @import 'contacto';
+@import 'skills';
