--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -45,184 +45,105 @@
         font-weight: 300;
         font-style: normal;
     }
-}
-
-.main-title {
-    font-size: 3.8em !important;
-}
-
-@media (max-width: 1400px) {
-    .main-title {
-        font-size: 3.2em !important;
-    }
-}
-
-@media (max-width: 1200px) {
-    .portfolio__face {
-        width: 150%;
-        height: auto;
-    }
-
-    .portfolio__description {
-        h1 {
-            font-size: 1.8em;
-        }
-
-        h3 {
-            font-size: 1em;
-        }
-    }
 
     .main-title {
-        font-size: 2.6em !important;
+        font-size: 3.8em !important;
     }
 
-}
-
-@media (max-width: 992px) {
-    .portfolio__face {
-        width: 100%;
-        height: auto;
-    }
-
-    .portfolio__description {
-        h1 {
-            font-size: 1.5em;
-        }
-
-        h3 {
-            font-size: 1em;
+    @media (max-width: 1400px) {
+        .main-title {
+            font-size: 3.2em !important;
         }
     }
 
-    .main-title {
-        font-size: 2.3em !important;
-    }
-}
-
-@media (max-width: 575px) {
-    .portfolio__face {
-        display: none;
-    }
-
-    /* #about:first-child {
-        margin-top: 0;
-    } */
-
-    .portfolio__description {
-        h1 {
-            font-size: 1.5em;
+    @media (max-width: 1200px) {
+        .portfolio__face {
+            width: 150%;
+            height: auto;
         }
 
-        h3 {
-            font-size: 1em;
+        .portfolio__description {
+            h1 {
+                font-size: 1.8em;
+            }
+
+            h3 {
+                font-size: 1em;
+            }
+        }
+
+        .main-title {
+            font-size: 2.6em !important;
+        }
+
+    }
+
+    @media (max-width: 992px) {
+        .portfolio__face {
+            width: 100%;
+            height: auto;
+        }
+
+        .portfolio__description {
+            h1 {
+                font-size: 1.5em;
+            }
+
+            h3 {
+                font-size: 1em;
+            }
+        }
+
+        .main-title {
+            font-size: 2.3em !important;
         }
     }
 
-    .main-title {
-        font-size: 2em !important;
-    }
-}
+    @media (max-width: 575px) {
+        .portfolio__face {
+            display: none;
+        }
 
-.grability {
-    margin-top: 130px;
-}
+        .portfolio__description {
+            h1 {
+                font-size: 1.5em;
+            }
 
-#intro {
-    margin-bottom: 50px !important;
-}
+            h3 {
+                font-size: 1em;
+            }
+        }
 
-.portfolio__card {
-    background: rgba(255, 255, 255, 0.08);
-    box-shadow: 0 5px 25px 0 rgba(255, 255, 255, 0.3);
-    backdrop-filter: blur(9.0px);
-    -webkit-backdrop-filter: blur(9.0px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 13px;
-    height: 100%;
-}
-
-.portfolioCard__title {
-    font-family: "Big Shoulders Display", sans-serif;
-    border-radius: 13px 13px 0 0;
-    padding: 0rem 1rem 0 1rem;
-    font-weight: 300;
-    font-size: 4rem;
-
-    p {
-        margin-bottom: 3px;
-    }
-}
-
-.portfolioCard__image {
-    .img-fluid {
-        border-radius: 13px 13px 0 0;
-    }
-}
-
-.portfolio__description {
-    padding: 0 1rem 1rem 1rem;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-#project-card {
-    width: 75%;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    margin: 70px 0;
-
-    h2 {
-        font-size: 1.2em;
-        font-weight: 300;
-        letter-spacing: 0.1em;
-        margin-top: 10px;
-    }
-
-    .secondary-image {
-        height: 230px;
-        background-position: top;
-        background-size: cover;
-    }
-}
-
-@media (max-width: 1199px) {
-    #project-card {
-        width: 100%;
-
-        h2 {
-            font-size: 1em;
-            font-weight: 300;
-            letter-spacing: 0.1em;
-            margin-top: 10px;
+        .main-title {
+            font-size: 2em !important;
         }
     }
-}
 
-@media (max-width: 992px) {
-    #project-card {
-        width: 100%;
+    .cards-overlap {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        gap: -30px;
 
-        h2 {
-            font-size: 0.8em;
-            font-weight: 300;
-            letter-spacing: 0.1em;
-            margin-top: 10px;
+        .card-1, .card-2 {
+            background: $yellow-gradient;
+            border-radius: 15px;
+            padding: 25px;
+            box-shadow: -6px 6px 10px rgba(0, 0, 0, 0.15);
+            max-width: 400px;
+            transform-origin: center bottom;
         }
-    }
-}
 
-@media (max-width: 575px) {
-    #project-card {
-        width: 100%;
+        .card-1 {
+            transform: rotate(-3deg);
+            z-index: 1;
+        }
 
-        h2 {
-            font-size: 0.6em;
-            font-weight: 300;
-            letter-spacing: 0.05em;
-            margin-top: 10px;
+        .card-2 {
+            transform: rotate(3deg);
+            z-index: 2;
+            margin-left: -30px;
         }
     }
 }
