--- a/src/styles/_experience.scss
+++ b/src/styles/_experience.scss
@@ -22,6 +22,7 @@
 
     .company-card {
       border-radius: 0 50px;
+      box-shadow: -6px 6px 10px rgba(0, 0, 0, 0.15);
 
       .title {
         border-radius: 0 30px 0 0;
