--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,7 +5,7 @@ $light-grey: rgb(232, 232, 232);
 $bg-black-transparent: rgba(0, 0, 0, 0.278);
 $bg-light: #e5722684;
 $yellow: #de9a1b;
-$yellow-gradient: linear-gradient(to bottom, #de9a1b, #c38a21);
+$yellow-gradient: linear-gradient(to bottom, #de9a1b, #ce9c3e);
 
 .grey {
     color: $grey;
@@ -67,7 +67,7 @@ body {
     }
 }
 
-a{
+a {
     &:hover {
         color: $blue;
     }
@@ -77,14 +77,16 @@ a{
 .tool-list {
     list-style: none;
     padding-left: 0;
+
     li {
-    padding: 0 15px;
-    border-radius: 20px;
-    margin-bottom: 10px;
-    width: auto;
-    box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.123);
+        padding: 0 15px;
+        border-radius: 20px;
+        margin-bottom: 10px;
+        width: auto;
+        box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.123);
     }
 }
+
 .tool-list li {
     width: fit-content;
 }
