--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,9 +3,9 @@ $blue: #265e84;
 $grey: rgba(255, 255, 255, 0.487);
 $light-grey: rgb(232, 232, 232);
 $bg-black-transparent: rgba(0, 0, 0, 0.278);
-$bg-light: #e5722684;
-$yellow: #de9a1b;
-$yellow-gradient: linear-gradient(to bottom, #de9a1b, #ce9c3e);
+$bg-light: #9f40586d;
+$yellow: #de9e28;
+$yellow-gradient: #de9e28;
 
 .grey {
     color: $grey;
